--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "moduleResolution": "Bundler",
     "moduleDetection": "auto",
     "outDir": "./dist",
-    "rootDir": "./s",
+    "rootDir": "./src",
     "lib": ["ESNext"],
     "target": "ES2023",
     "removeComments": false
